--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
     "react": "^18",
